# gyrocube-cube

./: .gitignore  CMakeLists.txt  Makefile  README.md  sdkconfig
components/actuators/: CMakeLists.txt  led_controller.cpp  led_controller.hpp  neopixel.cpp  neopixel.hpp  vibration_motor.cpp  vibration_motor.hpp
components/debug/: debug_utils.hpp
components/interfaces/: bluetooth_client.hpp  i2c.cpp  i2c.hpp
components/memory/: CMakeLists.txt  flash.cpp  flash.hpp  memory_layout_helpers.cpp  memory_layout_helpers.hpp  ring_buffer.cpp  ring_buffer.hpp  shared_buffer.cpp  shared_buffer.hpp
components/sensors/: CMakeLists.txt  accelerometer.cpp  accelerometer.hpp
main/: CMakeLists.txt  main.c  main.cpp
main/interfaces/: CMakeLists.txt  i2c.cpp  i2c.hpp
main/sensors/: CMakeLists.txt  accelerometer.cpp  accelerometer.h
network/application_layer/: application_layer.cpp
network/json/: CMakeLists.txt
network/link_layer/: CMakeLists.txt
network/mqtt/: CMakeLists.txt  mqtt.hpp  socket.cpp
network/network_definitions/: network_definitions.hpp
network/network_helpers/: CMakeLists.txt  network_definitions.hpp  network_event_handler.cpp  network_event_handler.hpp
network/network_layer/: network_layer.cpp
rtos/primitives/: CMakeLists.txt  mutex.cpp  mutex.hpp  queue.cpp  queue.hpp  (+2 more)
rtos/tasks/: CMakeLists.txt  accelerometer_task.cpp  accelerometer_task.hpp  display_task.cpp  display_task.hpp  network_event_handler.cpp  network_event_handler.hpp  receiver_task.cpp  receiver_task.hpp  shared_resources.hpp  task_resources.hpp  transmitter_task.cpp
(+2 files in other folders)
